--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "lodash": "^4.17.21",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
